kubernetes/apps/default/firefly-iii-importer/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-iii-importer
  annotations:
    gethomepage.dev/description: "Bank CSV/API import tool for Firefly III"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Finance"
    gethomepage.dev/icon: "mdi-database-import"
    gethomepage.dev/name: "Firefly III Data Importer"
spec:
  hostnames:
    - "firefly-importer.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: system
          port: 8080
